[package]
name = "tokio-rustls"
version = "0.10.0-alpha.3"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/tokio-rustls"
homepage = "https://github.com/quininer/tokio-rustls"
documentation = "https://docs.rs/tokio-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Tokio using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]

[badges]
travis-ci = { repository = "quininer/tokio-rustls" }
appveyor = { repository = "quininer/tokio-rustls" }

[dependencies]
rustls = "0.15"
futures = "0.1"
tokio-io = "0.1.6"
bytes = "0.4"
iovec = "0.1"
webpki = "0.19"

[features]
early-data = []
dangerous_configuration = [ "rustls/dangerous_configuration" ]

[dev-dependencies]
tokio = "0.1.6"
lazy_static = "1"
webpki-roots = "0.16"
