[package]
name = "futures-rustls"
version = "0.12.0-alpha.1"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/quininer/futures-rustls"
homepage = "https://github.com/quininer/futures-rustls"
documentation = "https://docs.rs/futures-rustls"
readme = "README.md"
description = "Asynchronous TLS/SSL streams for Future using Rustls."
categories = ["asynchronous", "cryptography", "network-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "quininer/futures-rustls" }
appveyor = { repository = "quininer/futures-rustls" }

[dependencies]
futures-io-preview = "=0.3.0-alpha.19"
futures-core-preview = "=0.3.0-alpha.19"
rustls = "0.16"
webpki = "0.21"

[features]
early-data = []

[dev-dependencies]
romio = "0.3.0-alpha.10"
futures-preview = "0.3.0-alpha.19"
futures-timer = "1"
lazy_static = "1"
webpki-roots = "0.18"
